--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <aside class="sidebar">
             <!-- HEADER -->
             <header class="toolbar-container">
-                <div class="avatar-user">
-                    <img class="user-photo" src="./img/avatar1.png" alt="">
-                </div>
+                <!-- <div class="avatar-user"> -->
+                <img class="user-photo" src="./img/people1.svg" alt="">
+                <!-- </div> -->
                 <nav class="auxixons-toolbarr-container">
                     <ul>
                         <li class="icon-status"><i class="fas fa-spinner"></i></li>
@@ -30,51 +30,46 @@
                 </nav>
 
             </header>
-            <!--  -->
-            <div class="notification-container">
-                <i class="fas fa-bell-slash"></i>
-                <p class="receive-notification">Receba notificações de novas mensagens </p>
-                <p class="activate-notification">Ativar notificações na área de trabalho <i class="fas fa-angle-right"></i> </p>
-            </div>
+
+
             <!-- SEARCH CONCACT -->
             <div class="search-container">
-                <i class="fas fa-search"></i>
-                <input type="text" id="search-concact" name="search" placeholder="Procurar conversa">
+                <i class="fas fa-search" id="concact-search"></i>
+                <input type="text" id="search-concact" name="search" placeholder="Pesquisar ou começar uma nova conversa">
             </div>
             <!-- CONCACTS -->
             <div class="concacts-container">
-                <div class="concacts">
-                    <div class="concact-box active-chat">
-                        <img class="user-photo" src="/img/avatar2.png" alt="">
-                        <div class="user-info">
-                            <p class="-user-name">Thay Negreiros</p>
-                            <p class="user-messagepreview"> <i class="fas fa-check-double"> </i>Oi, Tudo bem?</p>
-                            <div class="message-info">
-                                <p class="mensage-time">22:40</p>
+                <div class="concact-box active-chat">
+                    <img class="user-photo" src="/img/people2.svg" alt="">
+                    <div class="user-info">
+                        <p class="-user-name">Fulana</p>
+                        <p class="user-messagepreview"> <i class="fas fa-check-double"> </i>Oi, Tudo bem?</p>
+                        <div class="message-info">
+                            <span class="message-time">22:40</span>
+                        </div>
+                    </div>
 
-                            </div>
+                </div>
+                <div class="concact-box ">
+                    <img class="user-photo" src="/img/people3.svg" alt="">
+                    <div class="user-info">
+                        <p class="-user-name">Beltrano</p>
+                        <p class="user-messagepreview">Está disponivel para freela</p>
+                        <div class="message-info">
+                            <span class="message-time">12:30</span>
+                            <span class="message-peding">3</span>
                         </div>
                     </div>
-                    <div class="concact-box ">
-                        <img class="user-photo" src="/img/avatar3.png" alt="">
-                        <div class="user-info">
-                            <p class="-user-name">Rosione</p>
-                            <p class="user-messagepreview">Está disponivel para freela</p>
-                            <div class="message-info">
-                                <p class="mensage-time">12:30</p>
-                                <p class="mensage-pending">3</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="concact-box">
-                        <img class="user-photo" src="/img/avatar4.png" alt="">
-                        <div class="user-info">
-                            <p class="-user-name">Izáuria</p>
-                            <p class="user-messagepreview">O projeto ficou perfeito, Obrigada!</p>
-                            <div class="message-info">
-                                <p class="mensage-time">08:25</p>
-                                <p class="mensage-pending">5</p>
-                            </div>
+
+                </div>
+                <div class="concact-box">
+                    <img class="user-photo" src="/img/people4.svg" alt="">
+                    <div class="user-info">
+                        <p class="-user-name">Beltrana</p>
+                        <p class="user-messagepreview">O projeto ficou ótimo, Obrigada!</p>
+                        <div class="message-info">
+                            <span class="message-time">08:25</span>
+                            <span class="message-peding">5</span>
                         </div>
                     </div>
                 </div>
@@ -83,14 +78,15 @@
 
         <main class="chat-container">
             <!-- HEADER -->
-            <header>
-                <div><img class="user-photo" src="./img/avatar2.png" alt="">
-                    <p class="user-name">THay Negreiros</p>
+            <header class="header-chat">
+                <div class="concactinfo-container">
+                    <img class="user-photo" src="./img/people2.svg" alt="">
+                    <p class="user-name">Fulana</p>
                 </div>
                 <nav class="">
-                    <ul chattools-container>
+                    <ul class="chattools-container">
                         <li class=""><i class="fas fa-search"></i></li>
-                        <li class=""><i class="fas fa-paperclip"></i></li>
+
                         <li class=""><i class="fas fa-ellipsis-v"></i></li>
                     </ul>
                 </nav>
@@ -98,15 +94,18 @@
             <!-- MESSAGE -->
             <div class="messages-container">
                 <div class="bg-image"></div>
+                <div class="bg-color"></div>
                 <div class="chat-messages">
+
                     <p class="guest-message">Olá, Bom dia</p>
-                    <p class="user-message">Oi, tudo bem</p>
+                    <p class="user-message">Oi, tudo bem ?</p>
                 </div>
             </div>
             <!-- FOOTER -->
-            <footer>
+            <footer class="footermenssage">
                 <div class="sendmessage">
                     <i class="fa fa-grin"></i>
+                    <li class=""><i class="fas fa-paperclip"></i></li>
                     <input type="text" name="userinput" id="sendmensage" placeholder="Digite uma mensagem">
                     <i class="fas fa-microphone"></i>
                 </div>
